mails con copia oculta

--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -5517,56 +5517,58 @@ FONT 8, "MS Sans Serif"
   CONTROL "", 176, "Edit", ES_AUTOHSCROLL|ES_PASSWORD|WS_BORDER|WS_TABSTOP, 127, 67, 96, 12
   CONTROL "Autenticación SMTP", 175, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 337, 56, 79, 10
   CONTROL "Requiere SSL", 177, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 337, 68, 79, 10
-  CONTROL "", 180, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 128, 80, 297, 12
-  CONTROL "", 100, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 127, 110, 207, 12
-  CONTROL "", 110, "Edit", ES_RIGHT|ES_NUMBER|ES_AUTOHSCROLL|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 380, 110, 44, 12
-  CONTROL "", 120, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 127, 123, 297, 12
-  CONTROL "", 130, "Edit", ES_AUTOHSCROLL|ES_PASSWORD|WS_BORDER|WS_TABSTOP, 127, 136, 297, 12
-  CONTROL "", 140, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 127, 150, 297, 12
-  CONTROL "", 141, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 127, 163, 297, 12
-  CONTROL "", 142, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 127, 176, 115, 12
-  CONTROL "", 220, "ComboBox", WS_BORDER|CBS_DROPDOWN|WS_VSCROLL|WS_TABSTOP, 127, 191, 52, 15
-  CONTROL "Conexion en tiempo real con la web", 400, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 48, 208, 129, 10
-  CONTROL "Formato clientes: apellidos, nombre", 420, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 48, 220, 125, 10
-  CONTROL "Ocultar botón de exportación", 430, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 249, 208, 129, 10
-  CONTROL "", 210, "Edit", ES_NUMBER|ES_AUTOHSCROLL|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 381, 176, 43, 12
+  CONTROL "", 180, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 127, 80, 297, 12
+  CONTROL "", 185, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 127, 94, 297, 12
+  CONTROL "", 100, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 127, 125, 207, 12
+  CONTROL "", 110, "Edit", ES_RIGHT|ES_NUMBER|ES_AUTOHSCROLL|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 380, 125, 44, 12
+  CONTROL "", 120, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 127, 138, 297, 12
+  CONTROL "", 130, "Edit", ES_AUTOHSCROLL|ES_PASSWORD|WS_BORDER|WS_TABSTOP, 127, 151, 297, 12
+  CONTROL "", 140, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 127, 164, 297, 12
+  CONTROL "", 141, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 127, 177, 297, 12
+  CONTROL "", 142, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 127, 190, 115, 12
+  CONTROL "", 220, "ComboBox", WS_BORDER|CBS_DROPDOWN|WS_VSCROLL|WS_TABSTOP, 293, 203, 41, 15
+  CONTROL "Conexion en tiempo real con la web", 400, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 48, 220, 129, 10
+  CONTROL "Formato clientes: apellidos, nombre", 420, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 245, 220, 125, 10
+  CONTROL "Ocultar botón de exportación", 430, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 48, 207, 105, 10
+  CONTROL "", 210, "Edit", ES_NUMBER|ES_AUTOHSCROLL|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 293, 190, 40, 12
   CONTROL "", 150, "TBtnBmp", 0x00000000, 412, 190, 12, 13
   CONTROL "", 250, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 127, 245, 207, 12
   CONTROL "", 260, "Edit", ES_RIGHT|ES_NUMBER|ES_AUTOHSCROLL|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 380, 245, 44, 12
   CONTROL "", 230, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 127, 259, 207, 12
   CONTROL "Envío pasivo", 270, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 335, 260, 72, 10
-  CONTROL "", 240, "Edit", ES_AUTOHSCROLL|ES_PASSWORD|WS_BORDER|WS_TABSTOP, 127, 274, 207, 12
-  CONTROL "", 200, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 127, 288, 297, 12
+  CONTROL "", 240, "Edit", ES_AUTOHSCROLL|ES_PASSWORD|WS_BORDER|WS_TABSTOP, 127, 273, 207, 12
+  CONTROL "", 200, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 127, 287, 297, 12
   CONTROL "", 300, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 127, 315, 297, 12
   CONTROL "", 310, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 127, 328, 96, 12
-  CONTROL "Servidor base de datos de comercio electrónico", -1, "Button", BS_GROUPBOX, 44, 97, 385, 136
-  CONTROL "Servidor", -1, "Static", WS_GROUP, 48, 113, 31, 8
-  CONTROL "Usuario", -1, "Static", WS_GROUP, 48, 125, 29, 8
-  CONTROL "Contraseña", -1, "Static", WS_GROUP, 48, 138, 41, 8
-  CONTROL "Base de datos", -1, "Static", WS_GROUP, 48, 152, 51, 8
-  CONTROL "Puerto", -1, "Static", WS_GROUP, 337, 113, 26, 8
-  CONTROL "Probar conexión", -1, "Static", WS_GROUP, 335, 194, 57, 8
-  CONTROL "Servidor de correo electrónico", -1, "Button", BS_GROUPBOX, 44, 29, 385, 67
-  CONTROL "Servidor", -1, "Static", WS_GROUP, 48, 44, 31, 8
-  CONTROL "Cuenta", -1, "Static", WS_GROUP, 48, 57, 28, 8
+  CONTROL "Servidor base de datos de comercio electrónico", -1, "Button", BS_GROUPBOX, 44, 113, 385, 120
+  CONTROL "Servidor", -1, "Static", WS_GROUP, 48, 128, 31, 8
+  CONTROL "Usuario", -1, "Static", WS_GROUP, 48, 140, 29, 8
+  CONTROL "Contraseña", -1, "Static", WS_GROUP, 48, 153, 41, 8
+  CONTROL "Base de datos", -1, "Static", WS_GROUP, 48, 167, 51, 8
+  CONTROL "Puerto", -1, "Static", WS_GROUP, 337, 128, 26, 8
+  CONTROL "Probar conexión", -1, "Static", WS_GROUP, 337, 194, 57, 8
+  CONTROL "Servidor de correo electrónico", -1, "Button", BS_GROUPBOX, 44, 29, 385, 81
+  CONTROL "Servidor", -1, "Static", WS_GROUP, 49, 43, 31, 8
+  CONTROL "Cuenta", -1, "Static", WS_GROUP, 49, 57, 28, 8
   CONTROL "Puerto", -1, "Static", WS_GROUP, 337, 43, 26, 8
-  CONTROL "Contraseña", -1, "Static", WS_GROUP, 48, 70, 41, 8
-  CONTROL "Serie pedidos", -1, "Static", WS_GROUP, 335, 179, 45, 8
-  CONTROL "Latencia pedidos", -1, "Static", WS_GROUP, 48, 194, 65, 8
+  CONTROL "Contraseña", -1, "Static", WS_GROUP, 49, 70, 41, 8
+  CONTROL "Serie pedidos", -1, "Static", WS_GROUP, 244, 194, 45, 8
+  CONTROL "Latencia", -1, "Static", WS_GROUP, 245, 207, 33, 8
   CONTROL "Intercambio electrónico de datos EDI", -1, "Button", BS_GROUPBOX, 43, 303, 384, 40
   CONTROL "Directorio exportación", -1, "Static", WS_GROUP, 48, 318, 74, 8
   CONTROL "Código EDI [EAN]", -1, "Static", WS_GROUP, 48, 331, 62, 8
   CONTROL "Servidor para imagenes de comercio eletrónico", -1, "Button", BS_GROUPBOX, 43, 234, 385, 68
   CONTROL "Usuario", -1, "Static", WS_GROUP, 48, 262, 51, 8
-  CONTROL "Contraseña FTP", -1, "Static", WS_GROUP, 48, 276, 51, 8
-  CONTROL "Directorio imágenes", -1, "Static", WS_GROUP, 48, 291, 70, 8
+  CONTROL "Contraseña FTP", -1, "Static", WS_GROUP, 48, 275, 51, 8
+  CONTROL "Directorio imágenes", -1, "Static", WS_GROUP, 48, 290, 70, 8
   CONTROL "Servidor", -1, "Static", WS_GROUP, 48, 248, 31, 8
   CONTROL "Puerto", -1, "Static", WS_GROUP, 335, 248, 26, 8
   CONTROL "", 500, "Static", SS_BITMAP|SS_CENTERIMAGE, 4, 3, 34, 30, WS_EX_TRANSPARENT
   CONTROL "Configuraciones para el envio de email y para el enlace de la aplicación con una página web", -1, "Static", SS_LEFTNOWORDWRAP, 44, 3, 384, 8
-  CONTROL "Cookie key", -1, "Static", WS_GROUP, 48, 166, 51, 8
+  CONTROL "Cookie key", -1, "Static", WS_GROUP, 48, 181, 51, 8
   CONTROL "Enviar con copia a", -1, "Static", WS_GROUP, 49, 83, 65, 8
-  CONTROL "Prefijo bases de datos", -1, "Static", WS_GROUP, 48, 179, 72, 8
+  CONTROL "Prefijo bases de datos", -1, "Static", WS_GROUP, 48, 196, 72, 8
+  CONTROL "Enviar copia oculta", -1, "Static", WS_GROUP, 49, 97, 66, 8
 }
 
 EMPRESA_1 DIALOG DISCARDABLE 31, 12, 397, 287
@@ -18098,41 +18100,43 @@ FONT 8, "MS Sans Serif"
   CONTROL "", 90, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 106, 29, 308, 11
   CONTROL "", 120, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 106, 41, 308, 11
   CONTROL "", 150, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 106, 53, 308, 11
-  CONTROL "", 100, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 106, 65, 308, 11
-  CONTROL "", 110, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 106, 77, 294, 11
-  CONTROL "", 620, "RichEdit20A", WS_TABSTOP|0x00a01004, 48, 119, 563, 194
-  CONTROL "Asunto", -1, "Static", WS_GROUP, 44, 68, 27, 8
-  CONTROL "Adjuntar archivo", -1, "Static", WS_GROUP, 44, 80, 57, 8
+  CONTROL "", 155, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 106, 65, 308, 11
+  CONTROL "", 100, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 106, 77, 308, 11
+  CONTROL "", 110, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 106, 89, 294, 11
+  CONTROL "", 620, "RichEdit20A", WS_TABSTOP|0x00a01004, 48, 128, 563, 185
+  CONTROL "Asunto", -1, "Static", WS_GROUP, 44, 80, 27, 8
+  CONTROL "Adjuntar archivo", -1, "Static", WS_GROUP, 44, 92, 57, 8
   CONTROL "De", -1, "Static", WS_GROUP, 44, 31, 15, 8
   CONTROL "Para", 121, "Static", WS_GROUP, 44, 43, 20, 8
   CONTROL "", 500, "Static", SS_BITMAP|SS_CENTERIMAGE, 4, 4, 34, 30
   CONTROL "Envio de documento por correo electónico", -1, "Static", SS_LEFTNOWORDWRAP, 44, 3, 379, 8
-  CONTROL "", 140, "TBtnBmp", 0x00000000, 402, 77, 12, 11
-  CONTROL "", 160, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST|WS_VSCROLL|WS_TABSTOP, 450, 77, 149, 193
-  CONTROL "", 170, "TBtnBmp", 0x00000000, 600, 77, 12, 13
-  CONTROL "Campos", -1, "Static", WS_GROUP, 417, 80, 31, 8
+  CONTROL "", 140, "TBtnBmp", 0x00000000, 402, 89, 12, 11
+  CONTROL "", 160, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST|WS_VSCROLL|WS_TABSTOP, 450, 89, 149, 193
+  CONTROL "", 170, "TBtnBmp", 0x00000000, 600, 89, 12, 13
+  CONTROL "Campos", -1, "Static", WS_GROUP, 417, 92, 31, 8
   CONTROL "Con copia", 151, "Static", WS_GROUP, 44, 56, 37, 8
-  CONTROL "", 600, "TBtnBmp", 0x00000000, 48, 104, 12, 12
-  CONTROL "", 601, "TBtnBmp", 0x00000000, 61, 104, 12, 12
-  CONTROL "", 602, "TBtnBmp", 0x00000000, 77, 104, 12, 12
-  CONTROL "", 603, "TBtnBmp", 0x00000000, 93, 104, 12, 12
-  CONTROL "", 604, "TBtnBmp", 0x00000000, 106, 104, 12, 12
-  CONTROL "", 605, "TBtnBmp", 0x00000000, 119, 104, 12, 12
-  CONTROL "", 606, "TBtnBmp", 0x00000000, 135, 104, 12, 12
-  CONTROL "", 607, "TBtnBmp", 0x00000000, 148, 104, 12, 12
-  CONTROL "", 608, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST|CBS_DISABLENOSCROLL, 162, 104, 41, 68
-  CONTROL "", 609, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST|CBS_DISABLENOSCROLL|WS_VSCROLL, 205, 104, 95, 68
-  CONTROL "", 610, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST|CBS_DISABLENOSCROLL, 302, 104, 33, 68
-  CONTROL "", 611, "TBtnBmp", 0x00000000, 337, 104, 12, 12
-  CONTROL "", 612, "TBtnBmp", 0x00000000, 350, 104, 12, 12
-  CONTROL "", 613, "TBtnBmp", 0x00000000, 363, 104, 12, 12
-  CONTROL "", 614, "TBtnBmp", 0x00000000, 379, 104, 12, 12
-  CONTROL "", 615, "TBtnBmp", 0x00000000, 392, 104, 12, 12
-  CONTROL "", 616, "TBtnBmp", 0x00000000, 405, 104, 12, 12
-  CONTROL "", 617, "TBtnBmp", 0x00000000, 418, 104, 12, 12
-  CONTROL "", 618, "TBtnBmp", 0x00000000, 434, 104, 12, 12
-  CONTROL "", 619, "TBtnBmp", 0x00000000, 447, 104, 12, 12
-  CONTROL "Texto", -1, "Button", BS_GROUPBOX, 44, 94, 569, 223
+  CONTROL "", 600, "TBtnBmp", 0x00000000, 48, 114, 12, 12
+  CONTROL "", 601, "TBtnBmp", 0x00000000, 61, 114, 12, 12
+  CONTROL "", 602, "TBtnBmp", 0x00000000, 77, 114, 12, 12
+  CONTROL "", 603, "TBtnBmp", 0x00000000, 93, 114, 12, 12
+  CONTROL "", 604, "TBtnBmp", 0x00000000, 106, 114, 12, 12
+  CONTROL "", 605, "TBtnBmp", 0x00000000, 119, 114, 12, 12
+  CONTROL "", 606, "TBtnBmp", 0x00000000, 135, 114, 12, 12
+  CONTROL "", 607, "TBtnBmp", 0x00000000, 148, 114, 12, 12
+  CONTROL "", 608, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST|CBS_DISABLENOSCROLL, 162, 114, 41, 68
+  CONTROL "", 609, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST|CBS_DISABLENOSCROLL|WS_VSCROLL, 205, 114, 95, 68
+  CONTROL "", 610, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST|CBS_DISABLENOSCROLL, 302, 114, 33, 68
+  CONTROL "", 611, "TBtnBmp", 0x00000000, 337, 114, 12, 12
+  CONTROL "", 612, "TBtnBmp", 0x00000000, 350, 114, 12, 12
+  CONTROL "", 613, "TBtnBmp", 0x00000000, 363, 114, 12, 12
+  CONTROL "", 614, "TBtnBmp", 0x00000000, 379, 114, 12, 12
+  CONTROL "", 615, "TBtnBmp", 0x00000000, 392, 114, 12, 12
+  CONTROL "", 616, "TBtnBmp", 0x00000000, 405, 114, 12, 12
+  CONTROL "", 617, "TBtnBmp", 0x00000000, 418, 114, 12, 12
+  CONTROL "", 618, "TBtnBmp", 0x00000000, 434, 114, 12, 12
+  CONTROL "", 619, "TBtnBmp", 0x00000000, 447, 114, 12, 12
+  CONTROL "Texto", -1, "Button", BS_GROUPBOX, 44, 103, 569, 214
+  CONTROL "Con copia oculta", 156, "Static", WS_GROUP, 44, 68, 59, 8
 }
 
 SELECTPROPIEDAD DIALOG DISCARDABLE 141, -5, 305, 286
