--- a/resource/Gstimage12.rc
+++ b/resource/Gstimage12.rc
@@ -100,3 +100,4 @@ flat_printer_64 BITMAP "..\\bmp\\flat_printer_64.bmp"
 control_panel2_alpha_48 BITMAP "..\\bmp\\control_panel2_alpha_48.bmp"
 control_panel2_48 BITMAP "..\\bmp\\control_panel2_48.bmp"
 flat_clipboard_empty_user1_64 BITMAP "..\\bmp\\flat_clipboard_empty_user1_64.bmp"
+flat_about_64 BITMAP "..\\bmp\\flat_about_64.bmp"
