--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -5287,8 +5287,8 @@ DOCUMENTOS DIALOG DISCARDABLE 103, 127, 337, 126
 STYLE WS_POPUP|DS_MODALFRAME|DS_3DLOOK|WS_CAPTION|WS_SYSMENU|WS_VISIBLE
 FONT 8, "MS Sans Serif"
 {
-  CONTROL "", 120, "Edit", WS_BORDER|WS_TABSTOP, 56, 2, 275, 12
-  CONTROL "", 100, "Edit", WS_BORDER|WS_TABSTOP, 56, 14, 275, 12
+  CONTROL "", 120, "Edit", WS_BORDER|WS_TABSTOP, 56, 2, 275, 11
+  CONTROL "", 100, "Edit", WS_BORDER|WS_TABSTOP, 56, 14, 275, 11
   CONTROL "", 110, "Edit", ES_MULTILINE|ES_AUTOVSCROLL|WS_BORDER|WS_TABSTOP, 56, 26, 275, 76
   CONTROL "&Aceptar [F5]", IDOK, "Button", BS_DEFPUSHBUTTON|WS_TABSTOP, 225, 108, 50, 14
   CONTROL "&Cancelar", IDCANCEL, "Button", WS_TABSTOP, 281, 108, 50, 14
@@ -20173,5 +20173,21 @@ FONT 8, "MS Sans Serif"
   CONTROL "Organismos", -1, "Button", BS_GROUPBOX, 44, 29, 448, 220
   CONTROL "", 600, "Static", SS_BITMAP|SS_CENTERIMAGE, 4, 3, 34, 30
   CONTROL "Directorio de organismos para emisión de facturas electronicas con facturae.", -1, "Static", SS_LEFTNOWORDWRAP, 44, 3, 446, 8
+}
+
+LANGUAGE LANG_SPANISH,SUBLANG_SPANISH_MODERN
+
+CLIENTES_FACTURAE DIALOG DISCARDABLE 103, 127, 281, 63
+STYLE WS_POPUP|DS_MODALFRAME|DS_3DLOOK|WS_CAPTION|WS_SYSMENU|WS_VISIBLE
+FONT 8, "MS Sans Serif"
+{
+  CONTROL "", 100, "Edit", WS_BORDER|WS_TABSTOP, 75, 4, 200, 11
+  CONTROL "", 110, "Edit", WS_BORDER|WS_TABSTOP, 75, 16, 200, 11
+  CONTROL "", 120, "Edit", ES_MULTILINE|ES_AUTOVSCROLL|WS_BORDER|WS_TABSTOP, 75, 28, 200, 11
+  CONTROL "&Aceptar [F5]", IDOK, "Button", BS_DEFPUSHBUTTON|WS_TABSTOP, 170, 44, 50, 14
+  CONTROL "&Cancelar", IDCANCEL, "Button", WS_TABSTOP, 226, 44, 50, 14
+  CONTROL "Unidad tramitadora", -1, "Static", WS_GROUP, 5, 31, 65, 8
+  CONTROL "Organo gestor", -1, "Static", WS_GROUP, 5, 19, 50, 8
+  CONTROL "Oficina contable", -1, "Static", WS_GROUP, 5, 7, 57, 8
 }
 
