--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -6749,36 +6749,36 @@ FONT 8, "MS Sans Serif"
 {
   CONTROL "", 125, "Edit", WS_BORDER|WS_TABSTOP, 103, 37, 72, 11
   CONTROL "", 126, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 178, 37, 177, 11
-  CONTROL "", 300, "Edit", WS_BORDER|WS_TABSTOP, 103, 50, 72, 11
-  CONTROL "", 301, "Edit", WS_BORDER, 178, 50, 177, 11
-  CONTROL "", 165, "Edit", WS_BORDER|WS_TABSTOP, 103, 63, 72, 11
-  CONTROL "", 166, "Edit", WS_BORDER|WS_TABSTOP, 178, 63, 177, 11
-  CONTROL "", 170, "Edit", WS_BORDER|WS_TABSTOP, 103, 76, 72, 11
-  CONTROL "", 180, "Edit", WS_BORDER, 178, 76, 177, 11
-  CONTROL "", 230, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 103, 89, 252, 11
-  CONTROL "", F, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 417, 99, 84, 11
-  CONTROL "Impreso", 120, "Button", BS_AUTOCHECKBOX, 50, 103, 41, 10
-  CONTROL "", 121, "Edit", ES_MULTILINE|ES_AUTOHSCROLL|WS_BORDER, 103, 102, 72, 11
-  CONTROL "", 122, "Edit", ES_MULTILINE|ES_AUTOHSCROLL|WS_BORDER, 178, 102, 50, 11
-  CONTROL "Exp. EDI", 130, "Button", BS_AUTOCHECKBOX, 50, 116, 46, 10
-  CONTROL "", 131, "Edit", ES_MULTILINE|ES_AUTOHSCROLL|WS_BORDER, 103, 115, 72, 11
-  CONTROL "", 132, "Edit", ES_MULTILINE|ES_AUTOHSCROLL|WS_BORDER, 178, 115, 50, 11
-  CONTROL "Enviar mail", 135, "Button", BS_AUTOCHECKBOX, 50, 129, 47, 10
-  CONTROL "", 136, "Edit", ES_MULTILINE|ES_AUTOHSCROLL|WS_BORDER, 103, 128, 125, 11
+  CONTROL "", 300, "Edit", WS_BORDER|WS_TABSTOP, 103, 49, 72, 11
+  CONTROL "", 301, "Edit", WS_BORDER, 178, 49, 177, 11
+  CONTROL "", 165, "Edit", WS_BORDER|WS_TABSTOP, 103, 61, 72, 11
+  CONTROL "", 166, "Edit", WS_BORDER|WS_TABSTOP, 178, 61, 177, 11
+  CONTROL "", 170, "Edit", WS_BORDER|WS_TABSTOP, 103, 73, 72, 11
+  CONTROL "", 180, "Edit", WS_BORDER, 178, 73, 177, 11
+  CONTROL "", 230, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 417, 106, 241, 11
+  CONTROL "", F, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 103, 105, 72, 11
+  CONTROL "Impresa", 120, "Button", BS_AUTOCHECKBOX, 178, 106, 41, 10
+  CONTROL "", 121, "Edit", ES_MULTILINE|ES_AUTOHSCROLL|WS_BORDER, 230, 105, 72, 11
+  CONTROL "", 122, "Edit", ES_MULTILINE|ES_AUTOHSCROLL|WS_BORDER, 305, 105, 50, 11
+  CONTROL "Exp. EDI", 130, "Button", BS_AUTOCHECKBOX, 178, 118, 46, 10
+  CONTROL "", 131, "Edit", ES_MULTILINE|ES_AUTOHSCROLL|WS_BORDER, 230, 117, 72, 11
+  CONTROL "", 132, "Edit", ES_MULTILINE|ES_AUTOHSCROLL|WS_BORDER, 305, 117, 50, 11
+  CONTROL "Enviar mail", 135, "Button", BS_AUTOCHECKBOX, 178, 130, 47, 10
+  CONTROL "", 136, "Edit", ES_MULTILINE|ES_AUTOHSCROLL|WS_BORDER, 230, 129, 125, 11
   CONTROL "", 235, "Edit", WS_BORDER|WS_TABSTOP, 417, 37, 70, 11
   CONTROL "", 236, "Edit", WS_BORDER|WS_TABSTOP, 489, 37, 168, 11
-  CONTROL "", 160, "Edit", WS_BORDER|WS_TABSTOP, 417, 50, 240, 11
-  CONTROL "", 161, "Edit", WS_BORDER|WS_TABSTOP, 417, 63, 84, 11
-  CONTROL "", 128, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 417, 75, 84, 11
-  CONTROL "General", 410, "Button", BS_AUTORADIOBUTTON, 50, 156, 60, 10
-  CONTROL "", 162, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 417, 87, 84, 11
-  CONTROL "Unión Europea", 411, "Button", BS_AUTORADIOBUTTON, 50, 168, 60, 10
-  CONTROL "", 237, "Edit", ES_RIGHT|ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 547, 63, 110, 11
-  CONTROL "Exento", 412, "Button", BS_AUTORADIOBUTTON, 50, 180, 60, 10
-  CONTROL "", 570, "Edit", ES_RIGHT|ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 547, 75, 110, 11
-  CONTROL "Exportación", 413, "Button", BS_AUTORADIOBUTTON, 50, 192, 60, 10
-  CONTROL "", 580, "Edit", ES_RIGHT|ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 547, 88, 110, 11
-  CONTROL "", 240, "Edit", ES_MULTILINE|ES_AUTOVSCROLL|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 230, 157, 428, 29
+  CONTROL "", 160, "Edit", WS_BORDER|WS_TABSTOP, 417, 49, 240, 11
+  CONTROL "", 161, "Edit", WS_BORDER|WS_TABSTOP, 417, 61, 84, 11
+  CONTROL "", 128, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 417, 73, 84, 11
+  CONTROL "General", 410, "Button", BS_AUTORADIOBUTTON, 50, 157, 38, 10
+  CONTROL "", 162, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 417, 85, 84, 11
+  CONTROL "Unión Europea", 411, "Button", BS_AUTORADIOBUTTON, 50, 169, 61, 10
+  CONTROL "", 237, "Edit", ES_RIGHT|ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 547, 61, 110, 11
+  CONTROL "Exento", 412, "Button", BS_AUTORADIOBUTTON, 50, 181, 35, 10
+  CONTROL "", 570, "Edit", ES_RIGHT|ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 547, 73, 110, 11
+  CONTROL "Exportación", 413, "Button", BS_AUTORADIOBUTTON, 50, 193, 51, 10
+  CONTROL "", 580, "Edit", ES_RIGHT|ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 547, 85, 110, 11
+  CONTROL "", 240, "Edit", ES_MULTILINE|ES_AUTOVSCROLL|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 230, 158, 428, 29
   CONTROL "", 250, "Edit", ES_MULTILINE|ES_AUTOVSCROLL|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 230, 188, 428, 29
   CONTROL "&Modificar", 501, "Button", WS_TABSTOP, 48, 234, 50, 14
   CONTROL "&Eliminar", 502, "Button", WS_TABSTOP, 48, 249, 50, 14
@@ -6791,40 +6791,44 @@ FONT 8, "MS Sans Serif"
   CONTROL "0", 460, "Static", SS_RIGHT|WS_GROUP, 575, 249, 80, 10
   CONTROL "0", 480, "Static", SS_RIGHT|WS_GROUP, 585, 317, 70, 10
   CONTROL "Cobros", 112, "Button", BS_GROUPBOX, 44, 223, 465, 81
-  CONTROL "Entrega", -1, "Static", WS_GROUP, 370, 90, 46, 8
-  CONTROL "Propiedades", -1, "Button", BS_GROUPBOX, 174, 144, 489, 76
+  CONTROL "Entrega", -1, "Static", WS_GROUP, 370, 88, 46, 8
+  CONTROL "Propiedades", -1, "Button", BS_GROUPBOX, 174, 145, 489, 76
   CONTROL "Comentarios", -1, "Static", WS_GROUP, 178, 189, 44, 8
-  CONTROL "Observaciones", -1, "Static", WS_GROUP, 178, 158, 52, 8
-  CONTROL "Condiciones", -1, "Static", WS_GROUP, 50, 92, 46, 8
-  CONTROL "Retirado por", -1, "Static", WS_GROUP, 370, 53, 46, 8
-  CONTROL "Matrícula", -1, "Static", WS_GROUP, 370, 66, 46, 8
+  CONTROL "Observaciones", -1, "Static", WS_GROUP, 178, 159, 52, 8
+  CONTROL "Condiciones", -1, "Static", WS_GROUP, 370, 109, 44, 8
+  CONTROL "Retirado por", -1, "Static", WS_GROUP, 370, 52, 46, 8
+  CONTROL "Matrícula", -1, "Static", WS_GROUP, 370, 64, 46, 8
   CONTROL "Pendiente", -1, "Static", WS_GROUP, 518, 317, 44, 10
   CONTROL "Cobrado", -1, "Static", WS_GROUP, 518, 249, 44, 10
   CONTROL "Total factura", -1, "Static", WS_GROUP, 518, 234, 44, 10
   CONTROL "0", 455, "Static", SS_RIGHT|WS_GROUP, 575, 234, 80, 10
-  CONTROL "Proyecto", -1, "Static", WS_GROUP, 50, 79, 44, 8
-  CONTROL "Su pedido", -1, "Static", WS_GROUP, 370, 102, 37, 8
-  CONTROL "", -1, "Button", BS_GROUPBOX, 44, 30, 316, 112
+  CONTROL "Proyecto", -1, "Static", WS_GROUP, 50, 76, 44, 8
+  CONTROL "Su pedido", -1, "Static", WS_GROUP, 50, 108, 37, 8
+  CONTROL "", -1, "Button", BS_GROUPBOX, 44, 30, 316, 70
   CONTROL "Transport.", -1, "Static", WS_GROUP, 370, 40, 46, 8
-  CONTROL "Caja", -1, "Static", WS_GROUP, 50, 66, 44, 8
-  CONTROL "Bultos", -1, "Static", WS_GROUP, 370, 78, 46, 8
+  CONTROL "Caja", -1, "Static", WS_GROUP, 50, 64, 44, 8
+  CONTROL "Bultos", -1, "Static", WS_GROUP, 370, 76, 46, 8
   CONTROL "Anticipos", -1, "Button", BS_GROUPBOX, 44, 306, 465, 65
   CONTROL "Anticipos", -1, "Static", WS_GROUP, 518, 264, 44, 10
   CONTROL "0", 470, "Static", SS_RIGHT|WS_GROUP, 575, 264, 80, 10
   CONTROL "", -1, "Button", BS_GROUPBOX, 513, 223, 150, 81
   CONTROL "&Quitar", 280, "Button", WS_TABSTOP, 48, 347, 50, 14
-  CONTROL "Delegación", -1, "Static", WS_GROUP, 50, 53, 44, 8
-  CONTROL "", -1, "Button", BS_GROUPBOX, 365, 30, 298, 112
-  CONTROL "TARA", -1, "Static", WS_GROUP, 505, 66, 25, 8
-  CONTROL "Peso ", -1, "Static", WS_GROUP, 505, 78, 23, 8
-  CONTROL "Diferencia ", -1, "Static", WS_GROUP, 505, 91, 39, 8
+  CONTROL "Delegación", -1, "Static", WS_GROUP, 50, 52, 44, 8
+  CONTROL "", -1, "Button", BS_GROUPBOX, 365, 30, 298, 70
+  CONTROL "TARA", -1, "Static", WS_GROUP, 505, 64, 25, 8
+  CONTROL "Peso ", -1, "Static", WS_GROUP, 505, 76, 23, 8
+  CONTROL "Diferencia ", -1, "Static", WS_GROUP, 505, 88, 39, 8
   CONTROL "", -1, "Button", BS_GROUPBOX, 513, 305, 150, 66
-  CONTROL "", 163, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 417, 112, 84, 11
-  CONTROL "Su albarán", -1, "Static", WS_GROUP, 370, 115, 46, 8
+  CONTROL "", 163, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 103, 117, 72, 11
+  CONTROL "Su albarán", -1, "Static", WS_GROUP, 50, 120, 46, 8
   CONTROL "Usuario", -1, "Static", WS_GROUP, 50, 40, 44, 8
   CONTROL "", 990, "Static", SS_BITMAP|SS_CENTERIMAGE, 4, 3, 34, 30
   CONTROL "Factura cliente", -1, "Static", WS_GROUP, 44, 3, 120, 8
-  CONTROL "Régimen de impuestos", -1, "Button", BS_GROUPBOX, 44, 144, 127, 76
+  CONTROL "Régimen de impuestos", -1, "Button", BS_GROUPBOX, 44, 145, 127, 76
+  CONTROL "", 4002, "Button", BS_GROUPBOX, 365, 98, 298, 45
+  CONTROL "", 4003, "Button", BS_GROUPBOX, 44, 98, 316, 45
+  CONTROL "", 800, "ComboBox", WS_BORDER|CBS_DROPDOWN|CBS_SORT|WS_VSCROLL|WS_TABSTOP, 178, 85, 177, 91
+  CONTROL "Organismo tramitación facturae", -1, "Static", WS_GROUP, 50, 89, 113, 8
 }
 
 FACPRV_1 DIALOG DISCARDABLE 50, 35, 670, 378
@@ -20177,17 +20181,43 @@ FONT 8, "MS Sans Serif"
 
 LANGUAGE LANG_SPANISH,SUBLANG_SPANISH_MODERN
 
-CLIENTES_FACTURAE DIALOG DISCARDABLE 103, 127, 281, 63
+CLIENTES_FACTURAE DIALOG DISCARDABLE 103, 127, 301, 73
 STYLE WS_POPUP|DS_MODALFRAME|DS_3DLOOK|WS_CAPTION|WS_SYSMENU|WS_VISIBLE
 FONT 8, "MS Sans Serif"
 {
-  CONTROL "", 100, "Edit", WS_BORDER|WS_TABSTOP, 75, 4, 200, 11
-  CONTROL "", 110, "Edit", WS_BORDER|WS_TABSTOP, 75, 16, 200, 11
-  CONTROL "", 120, "Edit", ES_MULTILINE|ES_AUTOVSCROLL|WS_BORDER|WS_TABSTOP, 75, 28, 200, 11
-  CONTROL "&Aceptar [F5]", IDOK, "Button", BS_DEFPUSHBUTTON|WS_TABSTOP, 170, 44, 50, 14
-  CONTROL "&Cancelar", IDCANCEL, "Button", WS_TABSTOP, 226, 44, 50, 14
-  CONTROL "Unidad tramitadora", -1, "Static", WS_GROUP, 5, 31, 65, 8
-  CONTROL "Organo gestor", -1, "Static", WS_GROUP, 5, 19, 50, 8
-  CONTROL "Oficina contable", -1, "Static", WS_GROUP, 5, 7, 57, 8
+  CONTROL "", 90, "Edit", WS_BORDER|WS_TABSTOP, 97, 4, 200, 11
+  CONTROL "", 100, "Edit", WS_BORDER|WS_TABSTOP, 97, 16, 200, 11
+  CONTROL "", 110, "Edit", WS_BORDER|WS_TABSTOP, 97, 28, 200, 11
+  CONTROL "", 120, "Edit", ES_MULTILINE|ES_AUTOVSCROLL|WS_BORDER|WS_TABSTOP, 97, 40, 200, 11
+  CONTROL "&Aceptar [F5]", IDOK, "Button", BS_DEFPUSHBUTTON|WS_TABSTOP, 191, 56, 50, 14
+  CONTROL "&Cancelar", IDCANCEL, "Button", WS_TABSTOP, 247, 56, 50, 14
+  CONTROL "Unidad tramitadora", -1, "Static", WS_GROUP, 5, 43, 65, 8
+  CONTROL "Organo gestor", -1, "Static", WS_GROUP, 5, 31, 50, 8
+  CONTROL "Oficina contable", -1, "Static", WS_GROUP, 5, 19, 57, 8
+  CONTROL "Descripción del organismo", -1, "Static", WS_GROUP, 5, 7, 88, 8
+}
+
+ENTIDADES DIALOG DISCARDABLE 145, 79, 346, 255
+STYLE WS_POPUP|DS_MODALFRAME|DS_3DLOOK|WS_CAPTION|WS_SYSMENU|WS_VISIBLE
+CAPTION "Horas"
+FONT 8, "MS Sans Serif"
+{
+  CONTROL "", 110, "Edit", WS_BORDER|WS_TABSTOP, 52, 3, 71, 11
+  CONTROL "", 120, "Edit", WS_BORDER|WS_TABSTOP, 52, 15, 249, 11
+  CONTROL "&Aceptar [F5]", IDOK, "Button", BS_DEFPUSHBUTTON|WS_TABSTOP, 48, 233, 50, 14
+  CONTROL "&Cancelar", IDCANCEL, "Button", WS_TABSTOP, 103, 233, 50, 14
+  CONTROL "Descripción", -1, "Static", WS_GROUP, 8, 18, 41, 8
+  CONTROL "Código", -1, "Static", WS_GROUP, 8, 6, 37, 8
+  CONTROL "", 4002, "Edit", WS_BORDER|WS_TABSTOP, 52, 27, 249, 11
+  CONTROL "Nombre", -1, "Static", WS_GROUP, 8, 30, 41, 8
+  CONTROL "", 4003, "Edit", WS_BORDER|WS_TABSTOP, 52, 39, 92, 11
+  CONTROL "GLN Físico", -1, "Static", WS_GROUP, 8, 42, 41, 8
+  CONTROL "", 4004, "Edit", WS_BORDER|WS_TABSTOP, 209, 39, 92, 11
+  CONTROL "Punto lógico op.", 4005, "Static", WS_GROUP, 147, 42, 57, 8
+  CONTROL "Dirección", 4006, "Button", BS_GROUPBOX, 4, 53, 302, 61
+  CONTROL "", 4007, "Edit", WS_BORDER|WS_TABSTOP, 52, 62, 249, 11
+  CONTROL "Dirección", 4008, "Static", WS_GROUP, 8, 65, 41, 8
+  CONTROL "", 4009, "Edit", WS_BORDER|WS_TABSTOP, 52, 74, 92, 11
+  CONTROL "Código postal", 4010, "Static", WS_GROUP, 8, 77, 41, 8
 }
 
