--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -7841,8 +7841,8 @@ STYLE WS_POPUP|DS_MODALFRAME|DS_3DLOOK|WS_CAPTION|WS_SYSMENU|WS_VISIBLE
 CAPTION "Grupos de clientes"
 FONT 8, "MS Sans Serif"
 {
-  CONTROL "", 100, "Edit", WS_BORDER|WS_TABSTOP, 49, 5, 40, 12
-  CONTROL "", 110, "Edit", WS_BORDER|WS_TABSTOP, 49, 17, 384, 12
+  CONTROL "", 100, "Edit", WS_BORDER|WS_TABSTOP, 49, 5, 40, 11
+  CONTROL "", 110, "Edit", WS_BORDER|WS_TABSTOP, 49, 17, 384, 11
   CONTROL "", 130, "SysTreeView32", TVS_HASBUTTONS|TVS_HASLINES|TVS_LINESATROOT|TVS_SHOWSELALWAYS|TVS_CHECKBOXES|TVS_FULLROWSELECT|WS_BORDER, 49, 30, 384, 177
   CONTROL "&Aceptar [F5]", IDOK, "Button", WS_TABSTOP, 329, 210, 50, 14
   CONTROL "&Cancelar", IDCANCEL, "Button", WS_TABSTOP, 384, 210, 50, 14
@@ -15485,125 +15485,6 @@ FONT 8, "MS Sans Serif"
   CONTROL "Documentos", -1, "Static", WS_GROUP, 44, 3, 120, 8
 }
 
-LANGUAGE LANG_SPANISH,SUBLANG_SPANISH_MODERN
-
-PEDCLI_5 DIALOG DISCARDABLE 64, -21, 500, 283
-STYLE WS_CHILD|DS_3DLOOK|WS_VISIBLE
-FONT 8, "MS Sans Serif"
-{
-  CONTROL "Descuentos", 700, "Button", BS_GROUPBOX, 1, 204, 119, 61
-  CONTROL "", 130, "Edit", WS_BORDER|WS_TABSTOP, 147, 1, 52, 12
-  CONTROL "", 132, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 307, 1, 23, 12
-  CONTROL "", 131, "Edit", WS_BORDER|WS_TABSTOP, 147, 13, 183, 12
-  CONTROL "", 101, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 147, 25, 80, 12
-  CONTROL "", 133, "Edit", ES_RIGHT|WS_BORDER, 270, 25, 60, 12
-  CONTROL "", 102, "Edit", WS_BORDER|WS_TABSTOP, 147, 37, 183, 12
-  CONTROL "", 107, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 147, 49, 52, 12
-  CONTROL "", 103, "Edit", WS_BORDER|WS_TABSTOP, 200, 49, 130, 12
-  CONTROL "", 104, "Edit", WS_BORDER|WS_TABSTOP, 147, 61, 80, 12
-  CONTROL "", 106, "Edit", WS_BORDER, 270, 61, 60, 12
-  CONTROL "", 200, "Edit", WS_BORDER|WS_TABSTOP, 270, 73, 39, 12
-  CONTROL "", 201, "TBitmap", 0x00800000, 312, 73, 18, 11
-  CONTROL "", 140, "Edit", WS_BORDER|WS_TABSTOP, 368, 1, 40, 12
-  CONTROL "", 141, "Edit", WS_BORDER|WS_TABSTOP, 409, 1, 86, 12
-  CONTROL "", 150, "Edit", WS_BORDER|WS_TABSTOP, 368, 13, 40, 12
-  CONTROL "", 151, "Edit", WS_BORDER|WS_TABSTOP, 409, 13, 86, 12
-  CONTROL "", 160, "Edit", WS_BORDER|WS_TABSTOP, 368, 25, 40, 12
-  CONTROL "", 161, "Edit", WS_BORDER|WS_TABSTOP, 409, 25, 86, 12
-  CONTROL "", 170, "Edit", WS_BORDER|WS_TABSTOP, 368, 37, 40, 12
-  CONTROL "", 171, "Edit", WS_BORDER|WS_TABSTOP, 409, 37, 86, 12
-  CONTROL "", 180, "Edit", WS_BORDER|WS_TABSTOP, 368, 49, 40, 12
-  CONTROL "", F, "Edit", WS_BORDER|WS_TABSTOP, 409, 49, 86, 12
-  CONTROL "", 182, "Edit", ES_RIGHT|WS_BORDER|WS_TABSTOP, 368, 61, 40, 12
-  CONTROL "", 183, "Edit", ES_RIGHT|WS_BORDER, 409, 61, 86, 12
-  CONTROL "", 185, "Edit", WS_BORDER|WS_TABSTOP, 368, 73, 40, 12
-  CONTROL "", 186, "Edit", WS_BORDER|WS_TABSTOP, 409, 73, 86, 12
-  CONTROL "Aña&dir [F2]", 500, "Button", WS_TABSTOP, 1, 88, 50, 14
-  CONTROL "&Modificar [F3]", 501, "Button", WS_TABSTOP, 56, 88, 50, 14
-  CONTROL "&Eliminar [F4]", 502, "Button", WS_TABSTOP, 111, 88, 50, 14
-  CONTROL "&Zoom", 503, "Button", WS_TABSTOP, 166, 88, 50, 14
-  CONTROL "Lin. T&otal", 515, "Button", WS_TABSTOP, 221, 88, 50, 14
-  CONTROL "S&ubir", 524, "Button", WS_TABSTOP, 276, 88, 50, 14
-  CONTROL "&Bajar", 525, "Button", WS_TABSTOP, 331, 88, 50, 14
-  CONTROL "Mostrar Esc&ll.", 526, "Button", WS_TABSTOP, 386, 88, 50, 14
-  CONTROL "E&xpandir", 527, "Button", WS_TABSTOP, 445, 88, 50, 14
-  CONTROL "", 210, "TXBrowse", WS_TABSTOP|0x00300000, 1, 104, 494, 98
-  CONTROL "", 220, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 72, 214, 36, 12
-  CONTROL "", 230, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 72, 226, 36, 12
-  CONTROL "", 240, "Edit", WS_BORDER|WS_TABSTOP, 3, 238, 67, 12
-  CONTROL "", 250, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 72, 238, 36, 12
-  CONTROL "", 411, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 326, 204, 81, 12
-  CONTROL "", 260, "Edit", WS_BORDER|WS_TABSTOP, 3, 251, 67, 12
-  CONTROL "", 412, "Edit", ES_MULTILINE|WS_BORDER|WS_TABSTOP, 409, 204, 29, 12
-  CONTROL "", 270, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 72, 251, 36, 12
-  CONTROL "", 400, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 440, 204, 55, 12
-  CONTROL "R.E.", 406, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 326, 257, 23, 12
-  CONTROL "0", 407, "Static", SS_RIGHT|WS_GROUP, 415, 259, 80, 8
-  CONTROL "", 480, "Static", WS_GROUP, 326, 267, 35, 15
-  CONTROL "0", 470, "Static", SS_RIGHT|WS_GROUP, 415, 268, 80, 15
-  CONTROL "", 90, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 28, 1, 24, 12
-  CONTROL "", 100, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 54, 1, 40, 12
-  CONTROL "", 105, "Edit", ES_RIGHT|ES_MULTILINE|WS_BORDER|WS_TABSTOP, 96, 1, 18, 12
-  CONTROL "", 110, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 54, 13, 60, 12
-  CONTROL "", 120, "Edit", WS_BORDER|WS_TABSTOP, 54, 49, 60, 12
-  CONTROL "", 125, "Edit", ES_MULTILINE|WS_BORDER|WS_TABSTOP, 54, 61, 60, 12
-  CONTROL "", 218, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST|WS_TABSTOP, 54, 73, 60, 186
-  CONTROL "Imp. inc.", 129, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 1, 73, 45, 12
-  CONTROL "", 490, "TXBrowse", 0x00200000, 122, 204, 200, 59
-  CONTROL "Número", -1, "Static", WS_GROUP, 1, 4, 26, 8
-  CONTROL "Estado", 121, "Static", WS_GROUP, 1, 52, 24, 8
-  CONTROL "Presupuesto", 124, "Static", WS_GROUP, 1, 64, 44, 8
-  CONTROL "Divisa", -1, "Static", WS_GROUP, 231, 76, 23, 8
-  CONTROL "Cliente", -1, "Static", WS_GROUP, 116, 4, 26, 8
-  CONTROL "Nombre", -1, "Static", WS_GROUP, 116, 16, 26, 8
-  CONTROL "N.I.F.", -1, "Static", WS_GROUP, 116, 27, 19, 8
-  CONTROL "Domicilio", -1, "Static", WS_GROUP, 115, 38, 31, 8
-  CONTROL "CP/Pobl.", -1, "Static", WS_GROUP, 115, 51, 32, 8
-  CONTROL "Provincia", -1, "Static", WS_GROUP, 115, 63, 31, 8
-  CONTROL "Riesgo", -1, "Static", WS_GROUP, 231, 28, 23, 8
-  CONTROL "Precio", -1, "Static", WS_GROUP, 276, 4, 21, 8
-  CONTROL "Teléfono", -1, "Static", WS_GROUP, 231, 64, 32, 8
-  CONTROL "Tarifa per.", -1, "Static", WS_GROUP, 332, 3, 32, 8
-  CONTROL "Obra", -1, "Static", WS_GROUP, 332, 15, 26, 8
-  CONTROL "Almacén", -1, "Static", WS_GROUP, 332, 27, 28, 8
-  CONTROL "Pago", -1, "Static", WS_GROUP, 332, 39, 26, 8
-  CONTROL "Agente", -1, "Static", WS_GROUP, 332, 51, 27, 8
-  CONTROL "%Com.", -1, "Static", WS_GROUP, 332, 63, 22, 8
-  CONTROL "Ruta", -1, "Static", WS_GROUP, 332, 75, 26, 8
-  CONTROL "%", 703, "Static", WS_GROUP, 111, 217, 8, 8
-  CONTROL "%", 704, "Static", WS_GROUP, 111, 229, 8, 8
-  CONTROL "%", 705, "Static", WS_GROUP, 111, 241, 8, 8
-  CONTROL "%", 706, "Static", WS_GROUP, 111, 254, 8, 8
-  CONTROL "", 115, "Edit", WS_BORDER|WS_TABSTOP, 147, 73, 22, 12
-  CONTROL "", 116, "Edit", WS_BORDER, 171, 73, 56, 12
-  CONTROL "Usuario", -1, "Static", WS_GROUP, 115, 76, 29, 8
-  CONTROL "", 3000, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 72, 269, 36, 12
-  CONTROL "Horas montaje", -1, "Static", WS_GROUP, 3, 272, 49, 8
-  CONTROL "", -1, "Button", BS_GROUPBOX, 1, 263, 119, 19
-  CONTROL "", 219, "Edit", WS_BORDER|WS_TABSTOP, 3, 214, 67, 12
-  CONTROL "", 229, "Edit", WS_BORDER|WS_TABSTOP, 3, 226, 67, 12
-  CONTROL "0", 401, "Static", SS_RIGHT|WS_GROUP, 415, 216, 80, 8
-  CONTROL "0", 403, "Static", SS_RIGHT|WS_GROUP, 415, 234, 80, 8
-  CONTROL "0", 405, "Static", SS_RIGHT|WS_GROUP, 415, 249, 80, 8
-  CONTROL "Neto", 708, "Static", WS_GROUP, 326, 216, 18, 8
-  CONTROL "I.V.M.H.", 710, "Static", WS_GROUP, 326, 234, 25, 8
-  CONTROL "Impuestos", 711, "Static", WS_GROUP, 326, 249, 19, 8
-  CONTROL "Transporte", 712, "Static", WS_GROUP, 326, 225, 39, 8
-  CONTROL "0", 402, "Static", SS_RIGHT|WS_GROUP, 415, 225, 80, 8
-  CONTROL "0", 404, "Static", SS_RIGHT|WS_GROUP, 415, 242, 80, 8
-  CONTROL "Pnt. verde", 713, "Static", WS_GROUP, 326, 242, 38, 8
-  CONTROL "Margen", 709, "Static", WS_GROUP, 123, 272, 43, 8
-  CONTROL "", -1, "Button", BS_GROUPBOX, 121, 263, 119, 19
-  CONTROL "", 408, "Edit", ES_RIGHT|WS_BORDER|WS_TABSTOP, 158, 269, 74, 12
-  CONTROL "", 217, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST|WS_TABSTOP, 1, 13, 51, 186
-  CONTROL "", 117, "Edit", ES_RIGHT|WS_BORDER|WS_TABSTOP, 54, 49, 60, 12
-  CONTROL "Dias", 118, "Static", WS_GROUP, 1, 52, 17, 8
-  CONTROL "", 111, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 54, 25, 60, 12
-  CONTROL "Fecha salida", 112, "Static", WS_GROUP, 1, 28, 45, 8
-  CONTROL "", 113, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 54, 37, 60, 12
-  CONTROL "Fecha entrada", 114, "Static", WS_GROUP, 1, 40, 51, 8
-}
-
 LANGUAGE LANG_SPANISH,SUBLANG_SPANISH
 
 PEDIDOS_INTERNET DIALOG DISCARDABLE 87, -178, 528, 356
@@ -20197,27 +20078,76 @@ FONT 8, "MS Sans Serif"
   CONTROL "Descripción del organismo", -1, "Static", WS_GROUP, 5, 7, 88, 8
 }
 
-ENTIDADES DIALOG DISCARDABLE 145, 79, 346, 255
+ENTIDADES DIALOG DISCARDABLE 145, 79, 329, 255
 STYLE WS_POPUP|DS_MODALFRAME|DS_3DLOOK|WS_CAPTION|WS_SYSMENU|WS_VISIBLE
-CAPTION "Horas"
+CAPTION "Entidades"
 FONT 8, "MS Sans Serif"
 {
-  CONTROL "", 110, "Edit", WS_BORDER|WS_TABSTOP, 52, 3, 71, 11
-  CONTROL "", 120, "Edit", WS_BORDER|WS_TABSTOP, 52, 15, 249, 11
-  CONTROL "&Aceptar [F5]", IDOK, "Button", BS_DEFPUSHBUTTON|WS_TABSTOP, 48, 233, 50, 14
-  CONTROL "&Cancelar", IDCANCEL, "Button", WS_TABSTOP, 103, 233, 50, 14
-  CONTROL "Descripción", -1, "Static", WS_GROUP, 8, 18, 41, 8
-  CONTROL "Código", -1, "Static", WS_GROUP, 8, 6, 37, 8
-  CONTROL "", 4002, "Edit", WS_BORDER|WS_TABSTOP, 52, 27, 249, 11
-  CONTROL "Nombre", -1, "Static", WS_GROUP, 8, 30, 41, 8
-  CONTROL "", 4003, "Edit", WS_BORDER|WS_TABSTOP, 52, 39, 92, 11
-  CONTROL "GLN Físico", -1, "Static", WS_GROUP, 8, 42, 41, 8
-  CONTROL "", 4004, "Edit", WS_BORDER|WS_TABSTOP, 209, 39, 92, 11
-  CONTROL "Punto lógico op.", 4005, "Static", WS_GROUP, 147, 42, 57, 8
-  CONTROL "Dirección", 4006, "Button", BS_GROUPBOX, 4, 53, 302, 61
-  CONTROL "", 4007, "Edit", WS_BORDER|WS_TABSTOP, 52, 62, 249, 11
-  CONTROL "Dirección", 4008, "Static", WS_GROUP, 8, 65, 41, 8
-  CONTROL "", 4009, "Edit", WS_BORDER|WS_TABSTOP, 52, 74, 92, 11
-  CONTROL "Código postal", 4010, "Static", WS_GROUP, 8, 77, 41, 8
+  CONTROL "", 110, "Edit", WS_BORDER|WS_TABSTOP, 72, 11, 71, 11
+  CONTROL "", 120, "Edit", WS_BORDER|WS_TABSTOP, 72, 23, 249, 11
+  CONTROL "", 130, "Edit", WS_BORDER|WS_TABSTOP, 72, 35, 249, 11
+  CONTROL "", 140, "Edit", WS_BORDER|WS_TABSTOP, 72, 47, 92, 11
+  CONTROL "", 150, "Edit", WS_BORDER|WS_TABSTOP, 229, 47, 92, 11
+  CONTROL "", 160, "Edit", WS_BORDER|WS_TABSTOP, 72, 74, 249, 11
+  CONTROL "", 170, "Edit", WS_BORDER|WS_TABSTOP, 72, 86, 92, 11
+  CONTROL "", 180, "Edit", WS_BORDER|WS_TABSTOP, 72, 98, 249, 11
+  CONTROL "", 190, "Edit", WS_BORDER|WS_TABSTOP, 72, 110, 249, 11
+  CONTROL "", 200, "Edit", WS_BORDER|WS_TABSTOP, 72, 122, 249, 11
+  CONTROL "", 210, "Edit", WS_BORDER|WS_TABSTOP, 72, 150, 92, 11
+  CONTROL "", 220, "Edit", WS_BORDER|WS_TABSTOP, 72, 162, 249, 11
+  CONTROL "", 230, "Edit", WS_BORDER|WS_TABSTOP, 72, 174, 249, 11
+  CONTROL "", 240, "Edit", WS_BORDER|WS_TABSTOP, 72, 186, 249, 11
+  CONTROL "", 250, "Edit", WS_BORDER|WS_TABSTOP, 72, 198, 92, 11
+  CONTROL "", 260, "Edit", WS_BORDER|WS_TABSTOP, 229, 198, 92, 11
+  CONTROL "", 270, "Edit", WS_BORDER|WS_TABSTOP, 72, 210, 249, 11
+  CONTROL "&Aceptar [F5]", IDOK, "Button", BS_DEFPUSHBUTTON|WS_TABSTOP, 221, 232, 50, 14
+  CONTROL "&Cancelar", IDCANCEL, "Button", WS_TABSTOP, 276, 232, 50, 14
+  CONTROL "Descripción", -1, "Static", WS_GROUP, 8, 26, 41, 8
+  CONTROL "Código", -1, "Static", WS_GROUP, 8, 14, 37, 8
+  CONTROL "Nombre", -1, "Static", WS_GROUP, 8, 38, 41, 8
+  CONTROL "GLN Físico", -1, "Static", WS_GROUP, 8, 50, 41, 8
+  CONTROL "Punto lógico op.", -1, "Static", WS_GROUP, 167, 50, 57, 8
+  CONTROL "Dirección", -1, "Button", BS_GROUPBOX, 2, 65, 323, 73
+  CONTROL "Dirección", -1, "Static", WS_GROUP, 8, 77, 41, 8
+  CONTROL "Código postal", -1, "Static", WS_GROUP, 8, 89, 48, 8
+  CONTROL "Población", -1, "Static", WS_GROUP, 8, 101, 41, 8
+  CONTROL "Provincia", -1, "Static", WS_GROUP, 8, 113, 41, 8
+  CONTROL "País", -1, "Static", WS_GROUP, 8, 125, 41, 8
+  CONTROL "Teléfono", -1, "Static", WS_GROUP, 8, 153, 41, 8
+  CONTROL "Web", -1, "Static", WS_GROUP, 8, 165, 41, 8
+  CONTROL "Correo electrónico", -1, "Static", WS_GROUP, 8, 177, 63, 8
+  CONTROL "Contacto", -1, "Static", WS_GROUP, 8, 189, 63, 8
+  CONTROL "Código INE", -1, "Static", WS_GROUP, 8, 201, 48, 8
+  CONTROL "CNO/CNAE", -1, "Static", WS_GROUP, 167, 201, 57, 8
+  CONTROL "Otros", -1, "Static", WS_GROUP, 8, 213, 63, 8
+  CONTROL "Contacto", -1, "Button", BS_GROUPBOX, 2, 141, 323, 85
+  CONTROL "Entidades", -1, "Button", BS_GROUPBOX, 2, 3, 323, 59
+}
+
+FACTURAS_ENTIDADES DIALOG DISCARDABLE 126, 88, 377, 55
+STYLE WS_POPUP|DS_MODALFRAME|DS_3DLOOK|WS_CAPTION|WS_SYSMENU|WS_VISIBLE
+CAPTION "Entidades"
+FONT 8, "MS Sans Serif"
+{
+  CONTROL "", 100, "Edit", WS_BORDER|WS_TABSTOP, 49, 4, 72, 11
+  CONTROL "", 101, "Edit", WS_BORDER|WS_TABSTOP, 122, 4, 249, 11
+  CONTROL "", 110, "ComboBox", WS_BORDER|CBS_DROPDOWN|WS_VSCROLL|WS_TABSTOP, 49, 16, 72, 40
+  CONTROL "&Aceptar", IDOK, "Button", BS_DEFPUSHBUTTON|WS_TABSTOP, 269, 34, 50, 14
+  CONTROL "&Cancelar", IDCANCEL, "Button", WS_TABSTOP, 322, 34, 50, 14
+  CONTROL "Entidad", -1, "Static", WS_GROUP, 4, 7, 29, 8
+  CONTROL "Rol", -1, "Static", WS_GROUP, 4, 20, 16, 8
+}
+
+VIEW_FACTURAS_ENTIDADES DIALOG DISCARDABLE 64, -21, 670, 375
+STYLE WS_CHILD|DS_3DLOOK|WS_VISIBLE
+FONT 8, "MS Sans Serif"
+{
+  CONTROL "Aña&dir [F2]", 500, "Button", WS_TABSTOP, 44, 30, 50, 14
+  CONTROL "&Modificar [F3]", 501, "Button", WS_TABSTOP, 99, 30, 50, 14
+  CONTROL "&Eliminar [F4]", 502, "Button", WS_TABSTOP, 154, 30, 50, 14
+  CONTROL "&Zoom", 503, "Button", WS_TABSTOP, 209, 30, 50, 14
+  CONTROL "", 210, "TXBrowse", 0x00200000, 44, 48, 620, 323
+  CONTROL "", 990, "Static", SS_BITMAP|SS_CENTERIMAGE, 4, 3, 34, 30
+  CONTROL "Releción de entidades para faturae", -1, "Static", WS_GROUP, 44, 3, 120, 8
 }
 
