--- a/resource/Gstimage12.rc
+++ b/resource/Gstimage12.rc
@@ -101,3 +101,4 @@ control_panel2_alpha_48 BITMAP "..\\bmp\\control_panel2_alpha_48.bmp"
 control_panel2_48 BITMAP "..\\bmp\\control_panel2_48.bmp"
 flat_clipboard_empty_user1_64 BITMAP "..\\bmp\\flat_clipboard_empty_user1_64.bmp"
 flat_about_64 BITMAP "..\\bmp\\flat_about_64.bmp"
+flat_atom_64 BITMAP "..\\bmp\\flat_atom_64.bmp"
