--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -20078,50 +20078,50 @@ FONT 8, "MS Sans Serif"
   CONTROL "Descripción del organismo", -1, "Static", WS_GROUP, 5, 7, 88, 8
 }
 
-ENTIDADES DIALOG DISCARDABLE 145, 79, 329, 255
+ENTIDADES DIALOG DISCARDABLE 145, 79, 329, 253
 STYLE WS_POPUP|DS_MODALFRAME|DS_3DLOOK|WS_CAPTION|WS_SYSMENU|WS_VISIBLE
 CAPTION "Entidades"
 FONT 8, "MS Sans Serif"
 {
   CONTROL "", 110, "Edit", WS_BORDER|WS_TABSTOP, 72, 11, 71, 11
-  CONTROL "", 120, "Edit", WS_BORDER|WS_TABSTOP, 72, 23, 249, 11
-  CONTROL "", 130, "Edit", WS_BORDER|WS_TABSTOP, 72, 35, 249, 11
+  CONTROL "", 120, "Edit", WS_BORDER|WS_TABSTOP, 72, 23, 250, 11
+  CONTROL "", 130, "Edit", WS_BORDER|WS_TABSTOP, 72, 35, 250, 11
   CONTROL "", 140, "Edit", WS_BORDER|WS_TABSTOP, 72, 47, 92, 11
-  CONTROL "", 150, "Edit", WS_BORDER|WS_TABSTOP, 229, 47, 92, 11
+  CONTROL "", 150, "Edit", WS_BORDER|WS_TABSTOP, 230, 47, 92, 11
   CONTROL "", 160, "Edit", WS_BORDER|WS_TABSTOP, 72, 74, 249, 11
   CONTROL "", 170, "Edit", WS_BORDER|WS_TABSTOP, 72, 86, 92, 11
-  CONTROL "", 180, "Edit", WS_BORDER|WS_TABSTOP, 72, 98, 249, 11
-  CONTROL "", 190, "Edit", WS_BORDER|WS_TABSTOP, 72, 110, 249, 11
-  CONTROL "", 200, "Edit", WS_BORDER|WS_TABSTOP, 72, 122, 249, 11
-  CONTROL "", 210, "Edit", WS_BORDER|WS_TABSTOP, 72, 150, 92, 11
-  CONTROL "", 220, "Edit", WS_BORDER|WS_TABSTOP, 72, 162, 249, 11
-  CONTROL "", 230, "Edit", WS_BORDER|WS_TABSTOP, 72, 174, 249, 11
-  CONTROL "", 240, "Edit", WS_BORDER|WS_TABSTOP, 72, 186, 249, 11
-  CONTROL "", 250, "Edit", WS_BORDER|WS_TABSTOP, 72, 198, 92, 11
-  CONTROL "", 260, "Edit", WS_BORDER|WS_TABSTOP, 229, 198, 92, 11
-  CONTROL "", 270, "Edit", WS_BORDER|WS_TABSTOP, 72, 210, 249, 11
-  CONTROL "&Aceptar [F5]", IDOK, "Button", BS_DEFPUSHBUTTON|WS_TABSTOP, 221, 232, 50, 14
-  CONTROL "&Cancelar", IDCANCEL, "Button", WS_TABSTOP, 276, 232, 50, 14
+  CONTROL "", 180, "Edit", WS_BORDER|WS_TABSTOP, 72, 98, 250, 11
+  CONTROL "", 190, "Edit", WS_BORDER|WS_TABSTOP, 72, 110, 250, 11
+  CONTROL "", 210, "Edit", WS_BORDER|WS_TABSTOP, 72, 154, 92, 11
+  CONTROL "", 220, "Edit", WS_BORDER|WS_TABSTOP, 72, 166, 250, 11
+  CONTROL "", 230, "Edit", WS_BORDER|WS_TABSTOP, 72, 178, 250, 11
+  CONTROL "", 240, "Edit", WS_BORDER|WS_TABSTOP, 72, 190, 250, 11
+  CONTROL "", 250, "Edit", WS_BORDER|WS_TABSTOP, 72, 202, 92, 11
+  CONTROL "", 260, "Edit", WS_BORDER|WS_TABSTOP, 230, 202, 92, 11
+  CONTROL "", 270, "Edit", WS_BORDER|WS_TABSTOP, 72, 214, 250, 11
+  CONTROL "&Aceptar [F5]", IDOK, "Button", BS_DEFPUSHBUTTON|WS_TABSTOP, 221, 236, 50, 14
+  CONTROL "&Cancelar", IDCANCEL, "Button", WS_TABSTOP, 276, 236, 50, 14
   CONTROL "Descripción", -1, "Static", WS_GROUP, 8, 26, 41, 8
   CONTROL "Código", -1, "Static", WS_GROUP, 8, 14, 37, 8
   CONTROL "Nombre", -1, "Static", WS_GROUP, 8, 38, 41, 8
   CONTROL "GLN Físico", -1, "Static", WS_GROUP, 8, 50, 41, 8
   CONTROL "Punto lógico op.", -1, "Static", WS_GROUP, 167, 50, 57, 8
-  CONTROL "Dirección", -1, "Button", BS_GROUPBOX, 2, 65, 323, 73
+  CONTROL "Dirección", -1, "Button", BS_GROUPBOX, 2, 65, 323, 77
   CONTROL "Dirección", -1, "Static", WS_GROUP, 8, 77, 41, 8
   CONTROL "Código postal", -1, "Static", WS_GROUP, 8, 89, 48, 8
   CONTROL "Población", -1, "Static", WS_GROUP, 8, 101, 41, 8
   CONTROL "Provincia", -1, "Static", WS_GROUP, 8, 113, 41, 8
   CONTROL "País", -1, "Static", WS_GROUP, 8, 125, 41, 8
-  CONTROL "Teléfono", -1, "Static", WS_GROUP, 8, 153, 41, 8
-  CONTROL "Web", -1, "Static", WS_GROUP, 8, 165, 41, 8
-  CONTROL "Correo electrónico", -1, "Static", WS_GROUP, 8, 177, 63, 8
-  CONTROL "Contacto", -1, "Static", WS_GROUP, 8, 189, 63, 8
-  CONTROL "Código INE", -1, "Static", WS_GROUP, 8, 201, 48, 8
-  CONTROL "CNO/CNAE", -1, "Static", WS_GROUP, 167, 201, 57, 8
-  CONTROL "Otros", -1, "Static", WS_GROUP, 8, 213, 63, 8
-  CONTROL "Contacto", -1, "Button", BS_GROUPBOX, 2, 141, 323, 85
+  CONTROL "Teléfono", -1, "Static", WS_GROUP, 8, 157, 41, 8
+  CONTROL "Web", -1, "Static", WS_GROUP, 8, 169, 41, 8
+  CONTROL "Correo electrónico", -1, "Static", WS_GROUP, 8, 181, 63, 8
+  CONTROL "Contacto", -1, "Static", WS_GROUP, 8, 193, 63, 8
+  CONTROL "Código INE", -1, "Static", WS_GROUP, 8, 205, 48, 8
+  CONTROL "CNO/CNAE", -1, "Static", WS_GROUP, 167, 205, 57, 8
+  CONTROL "Otros", -1, "Static", WS_GROUP, 8, 217, 63, 8
+  CONTROL "Contacto", -1, "Button", BS_GROUPBOX, 2, 145, 323, 85
   CONTROL "Entidades", -1, "Button", BS_GROUPBOX, 2, 3, 323, 59
+  CONTROL "", 200, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST|WS_VSCROLL|WS_TABSTOP, 72, 123, 250, 129
 }
 
 FACTURAS_ENTIDADES DIALOG DISCARDABLE 126, 88, 377, 55
