--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -8913,14 +8913,15 @@ CAPTION "Incidencias"
 FONT 8, "MS Sans Serif"
 {
   CONTROL "", 110, "Edit", ES_MULTILINE|ES_AUTOVSCROLL|WS_BORDER|WS_TABSTOP, 52, 2, 280, 75
-  CONTROL "", 100, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 52, 79, 91, 12
+  CONTROL "", 100, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 52, 79, 70, 12
+  CONTROL "", 101, "Edit", WS_BORDER|WS_TABSTOP, 123, 79, 60, 12
   CONTROL "", 120, "Edit", WS_BORDER|WS_TABSTOP, 52, 93, 28, 12
   CONTROL "", 130, "Edit", WS_BORDER|WS_TABSTOP, 81, 93, 251, 12
   CONTROL "Mostrar incidencia", 150, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 52, 106, 72, 12
   CONTROL "Visto", 140, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 52, 118, 29, 12
   CONTROL "&Aceptar [F5]", IDOK, "Button", BS_DEFPUSHBUTTON|WS_TABSTOP, 226, 135, 50, 14
   CONTROL "&Cancelar", IDCANCEL, "Button", WS_TABSTOP, 282, 135, 50, 14
-  CONTROL "Fecha", -1, "Static", WS_GROUP, 5, 82, 27, 8
+  CONTROL "Fecha/Hora", -1, "Static", WS_GROUP, 5, 82, 44, 8
   CONTROL "Incidencia", -1, "Static", WS_GROUP, 5, 3, 33, 8
   CONTROL "Tipo", -1, "Static", WS_GROUP, 5, 96, 19, 8
 }
